Cascading Change Log

2.5.5 [unreleased]

  Added custom error reporting for Hadoop standalone mode. The o.a.h.mapred.LocalJobRunner does not return
  o.a.h.mapred.TaskReports which would cause the actual Exception to be lost. c.f.h.FlowMapper and c.f.h.FlowReducer
  will now report the Exception directly to c.f.h.p.HadoopFlowStepJob. This has no influence on Jobs running on a
  real cluster.

  Fixed issue where c.f.h.HadoopFlowStep would not set a o.a.h.mapred.Partitioner that supports custom c.t.Hasher
  implementations during partitioning. c.t.h.u.GroupingPartitioner has been renamed to
  c.t.h.u.GroupingSortingPartitioner and a new c.t.h.u.GroupingPartitioner has been introduced that uses the hashCode
  of the tuples while honoring custom hashers.

  Fixed issue where the ctor of c.t.Fields was not checking the given types for null values.

  Fixed issue where Hadoop credentials could be shared across job submissions and become corrupted
  causing j.i.EOFExceptions.

  Fixed issue where c.t.Fields#resolve() would lose type information with complex selectors.

  Added new c.f.h.p.HadoopPlanner property to disable adjacent tap removal optimization. Setting
  "cascading.multimapreduceplanner.collapseadjacentaps" to false will disable the optimization that is on by default.
  This optimization can in a few cases reduce the number of MR jobs, but without consistent type information, could
  result in a type mismatch errors during joins.

2.5.4

  Fixed an issue where c.t.h.Hfs#getChildIdentifiers() could throw an j.l.StringIndexOutOfBoundsException.

  Updated c.p.a.AggregateBy$CompositeFunction to not use the threshold in #equals or #hashCode.

  Fixed issue where a c.p.Merge could hide the streamed/accumulated nature of a stream when leading to a c.p.Group
  pipe. This could result in duplicate data passed to the c.p.GroupBy or c.p.CoGroup within a MapReduce job.

  Fixed issue where c.p.a.FirstBy only accepted a single field name.
